--- a/po/wesnoth-lib/gd.po
+++ b/po/wesnoth-lib/gd.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-11-14 20:20+0100\n"
+"PO-Revision-Date: 2012-11-21 23:33+0100\n"
 "Last-Translator: GunChleoc <fios@foramnagaidhlig.net>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "Language: gd\n"
@@ -4097,7 +4097,7 @@ msgstr "Gin mapa"
 
 #: src/hotkeys.cpp:189
 msgid "Apply a Mask"
-msgstr "cuir masg an gnìomh"
+msgstr "Cuir masg an gnìomh"
 
 #: src/hotkeys.cpp:190
 msgid "Create Mask"
